design/v12/design-system.md
# Design System v12 — Party Cupid (Final)

> **v12 정밀 수정** (Codex v11 잔여 3건):
> 1. 실패 우선순위 단일 진실의 원천: **마감 > 충돌 > 저장 실패 > 네트워크**
> 2. A-9 2차원 탭 **렌더링 규칙 테이블** (축 선택별 표시/숨김 고정)
> 3. **카드 ARIA 중첩 해결**: 카드는 `role` 없는 컨테이너, 하트는 독립 `role="button"`

> **v11 근본 개선** (5대 원인 정면 해결):
> 1. **2차원 탭 모델** 정식 도입 (상태축 × 분류축)
> 2. **카드 ARIA 낭독 패턴** 신설 (복합 컴포넌트 접근성)
> 3. **실패 우선순위 트리** 신설 (교차 실패 시나리오)
> 4. **UI 약속 한계 원칙** 명문화 (UI/정책 분리)
> 5. 이전 버전 규격 모두 유지 (v10까지 누적)

> **v10 최종 수정** (v9 → v10, 6건):
> 1. 문서 제목 v10으로 통일 (v9에서 v8 잔존 수정)
> 2. A-9 상단 탭에 `[미완료]` 포함 — ⏳/🔄 섹션과 탭 연결 명시
> 3. closing-saving 자동 동작 DS에 "2초 후 자동 확정" 명시 (wireframes와 일치)
> 4. 아이콘 스크린리더 대체 문구 표 신설 (🆕/⏳/🔄/⚠ 등)
> 5. "새로 들어옴" 카드 표기 개선 (필터와 연결된 표현)
> 6. `[모두 폐기]` 2단계 확인 모달 추가 (파괴적 액션)

> **v7 → v8 변경** (내부 일관성 완성, 문서 자기 모순 제거):
> 1. Save State Tokens **4종 완전 정의**: `local-pending` / `server-final` / `conflict-pending` / `save-failed`
> 2. Heart Button 컴포넌트 **사용 규칙 명시**: A-7은 base 상태만, A-9 전용 상태(maintained/new) 분리
> 3. 충돌 모달 ESC **최종 허용** 단일화 (ESC 금지 잔존 제거)
> 4. "새로 들어옴" 경계 조건 추가 (백그라운드 복귀 / 시계 오차 / 동기화 실패)
> 5. A-7 ROUND_BANNER 문구에서 편집어 제거 ("유지/변경" → "다시 선택 가능")

## 컬러 토큰 (v3와 동일)

### Base
`--color-primary` `#FF4D6D` · `--color-primary-hover` `#E63956` · `--color-primary-soft` `#FFE3E8`
`--color-accent` `#7C3AED` · `--color-accent-soft` `#EDE4FF`
`--color-success` `#10B981` · `--color-success-soft` `#D4F7E8`
`--color-danger` `#EF4444` · `--color-danger-soft` `#FEE2E2`
`--color-warning` `#F59E0B` · `--color-warning-surface` `#FEF3C7`
`--color-bg` `#FFF7F8` · `--color-surface` `#FFFFFF`
`--color-text-primary` `#1F2937` · `--color-text-secondary` `#6B7280` · `--color-text-disabled` `#9CA3AF`
`--color-border` `#E5E7EB` · `--color-border-strong` `#D1D5DB`
`--color-overlay` `rgba(17,24,39,0.5)`

### State
`--state-disabled-bg` · `--state-focus-ring` 2px primary + 2px offset · `--state-selected-bg` primary-soft · `--state-selected-border` 2px primary · `--state-pressed-scale` 0.97

### Vote Status
`--vote-maintained` primary-soft + border 2px primary (유지 — A-9만)
`--vote-new` success-soft + border 2px success (신규 — A-9만)
`--vote-removed` warning-surface + border dashed 2px warning (해제 예정 — A-9만)
`--vote-unsaved` border-l 4px danger (저장 미완료)

### "새로 들어옴" 판정 규칙 (v8 신규)

A-7 필터 `[새로 들어옴]`의 정의 + 경계 조건:

**기준 정의**: "마지막 화면 방문 시각 이후 5분 내에 방에 입장한 참여자"

**판정 주체**: **서버 시각 기준** (클라이언트 시계 오차 무시)

**경계 조건 처리**:
| 상황 | 처리 |
|------|------|
| 앱이 백그라운드 → 복귀 | 복귀 시점을 "마지막 방문"으로 재설정 |
| 처음 입장 (첫 방문) | 파티 시작 시점 이후 5분 내 입장자 모두 |
| 마지막 방문 동기화 실패 | 서버가 마지막 폴링 시각 기준 폴백 |
| 클라이언트 시계 오차 | 서버 타임스탬프만 신뢰, 클라 시계 무시 |
| 5분이 너무 짧음/긺 | 주최자 설정 불가 (MVP 고정), 향후 확장 시 옵션화 |

**시각화**: 카드 우상단 `🆕 micro 배지` (텍스트 아닌 아이콘만, 접근성 `aria-label="최근 입장"`)

### Save State Tokens (v8 완전 정의 — 4종)

| 토큰 | 시각화 | 의미 | 적용 화면 |
|------|--------|------|-----------|
| `--state-server-final` | (기본) | 서버 확정 상태 — 모든 수치에 반영 | 전체 |
| `--state-local-pending` | ⏳ 배지 + border dashed warning | 로컬 변경, 서버 저장 전 — 수치 미반영 | A-7, A-8, A-9 |
| `--state-conflict-pending` | 🔄 배지 + border 2px warning | 충돌 "제자리 유지" 선택 후 미해결 | A-9 전용 |
| `--state-save-failed` | ⚠ 배지 + border 2px danger | 재시도 3회 실패 | A-7, A-9 |

### 수치 표기 규칙 (v7 신규 — 매우 중요)

**모든 수치는 서버 확정 상태 기준**:
- 홈의 "❤ 3명 선택" → 서버에 저장된 최종 선택 수
- A-7 필터 "내 선택 3" → 서버 확정 3건
- A-9 집계 "유지 2 · 신규 1 · 해제 예정 0" → 서버 확정 상태 분해
- 남은 하트 "❤ 2/3" → 서버 확정 사용량 기준

**pending은 수치에 포함하지 않고 별도 뱃지로만 표시**:
- "⏳ 저장 중 1건 · 🔴 실패 2건" (상단 집계 배너)
- 카드별 ⏳ / 🔴 / 🔄 뱃지
- 이유: 수치가 사용자 기기 상태에 따라 다르면 공정성/투명성 훼손

## 타이포그래피
display 28/700, h1 22/700, h2 18/600, body 15/400, small 13/400, micro 11/500

## 스페이싱
4px grid · sp-1/2/3/4/5/6/8/12

---

## 컴포넌트 규격 (Unified)

### Button
default / hover / pressed / disabled / focus / loading × primary / secondary / danger
- 높이 sm 36 · md 44 (기본) · lg 52
- 터치 타겟 ≥ 44×44

### Heart Button (v8: 화면별 사용 규칙 명시)

**Base 상태 (모든 화면)**:
- `unselected` — ♡ outline
- `selected` — ❤ filled, primary-soft bg
- `selected-unsaved` — ❤ + ⚠ 빨간 점 + "저장 실패 · 탭 재시도"
- `disabled-out-of-vote` — ♡ muted, "1차 투표는 20:30부터" 툴팁
- `disabled-no-heart` — ♡ muted, "남은 하트 없음"
- `loading` — spinner 우상단 + "저장 중..."

**편집 전용 상태 (A-9 `/my-hearts`에서만 사용)**:
- `selected-maintained` — ❤ + "유지" micro 배지 · A-9 전용
- `selected-new` — ❤ + "신규" 배지 + success-soft bg · A-9 전용

**사용 규칙 (v8 명문화)**:
- **A-7 참여자 목록**: Base 상태만 사용. 편집 어휘("유지/신규") 노출 금지.
- **A-8 참여자 상세**: Base 상태 + 작은 텍스트로 "1차 선택됨" 정보 표시 가능 (편집 어휘 아님)
- **A-9 내 선택 검토**: 모든 상태 사용 가능. 편집 전용 상태가 핵심 시각화.
- 컴포넌트 레벨에서 prop으로 `variant="explore" | "edit"` 분리하여 사용

### Input Field
default / focus / filled / error / disabled / loading — v3와 동일

### Checkbox, Tab, Card, Countdown, Empty State, Loading Skeleton
v3 규격 그대로 유지 (변경 없음)

### Error State
네트워크 / 전송 실패 / 검증 실패 / 권한 실패 / 서버 5xx / QR 생성 실패 / 신고 제출 실패 / **하트 저장 실패** / **동시성 충돌** / **마감 직전 저장 중**

### Round Banner (v4 patch → base 통합)

`ROUND_BANNER` 컴포넌트 — 투표 단계 자동 전환:

| 상태 | 배경 | 아이콘 | 텍스트 | ARIA |
|------|------|--------|--------|------|
| `pre-vote-1` | bg | ⏳ | "곧 1차 투표 시작 · 20:30" | polite |
| `vote-1` | accent-soft | 🌸 | "1차 투표 진행 중 · 첫인상으로 선택" | polite |
| `vote-1-ending` | warning-surface | ⏰ | "1차 마감 1분 전 · 지금 선택이 최종" | **assertive** |
| `between` | bg | 💬 | "대화 시간 · 22:00에 2차 시작" | polite |
| `vote-2` | accent-soft | 💜 | "2차 투표 진행 중 · 다시 선택 가능" | polite |
| `vote-2-ending` | danger-soft | ⏰ | "2차 마감 1분 전 · 이번이 최종 선택" | **assertive** |
| `closed` | disabled-bg | 🔒 | "투표 종료 · 매칭 결과 확인" + [결과 보기] | assertive |

**원칙**:
- 클라이언트 타이머 기반 자동 prop 교체. 문구 수동 변경 금지.
- **중복 낭독 방지 (v6)**: 상단과 하단에 ROUND_BANNER가 동시 표시될 때는 **하단(더 긴급한 마감 임박) 1개만 aria-live 활성**, 상단은 `aria-hidden="true"` 또는 `aria-live="off"`로 설정. 한 화면에 동일 상태를 2번 낭독하지 않음.

### Heart Save State (v4 patch → base 통합)

`HEART_SAVE_STATE` 상태 머신:

```
idle → saving → saved (0.8s fade)
                   ↓
              [failure] → save-failed (사용자 재시도 대기)
                   ↓
              [conflict] → conflict (diff 표시 모달)
```

| 상태 | 시각화 | 텍스트 | 자동 동작 |
|------|--------|--------|----------|
| `idle` | 기본 | - | - |
| `saving` | 하트 + spinner | "저장 중..." | - |
| `saved` | 하트 + ✓ fade 0.8s | "저장됨" | 0.8s 후 idle로 |
| `save-failed` | 하트 + ⚠ 빨간 점 | "저장 실패" | 2→4→8s 자동 재시도 (3회) |
| `conflict` | 하트 + 🔄 주황 | "변경 감지" | **CONFLICT_DIFF_MODAL 표시** |
| `closing-saving` | 하트 + ⏳ | "마감 직전 저장 중 · 2초 후 자동 확정" | **2초 타이머 후 서버 최종 확정, UI 비활성화** |

### Conflict Diff Modal (v5 신규 — Codex 지적 #2 해결)

동시성 충돌 시 자동 새로고침 **대신** 사용자에게 diff 제시:

```
┌──────────────────────────────┐
│  ⚠ 다른 기기에서 변경됐어요     │
│                                │
│  ━━ 내가 방금 한 변경 ━━        │
│  + ❤ 라이트 #02 (선택)          │
│                                │
│  ━━ 다른 기기에서의 변경 ━━     │
│  - ❤ 라이트 #02 (취소됨)        │
│                                │
│  어느 쪽을 유지할까요?           │
│                                │
│  [내 변경 사용]  [다른 기기 사용]│
│  [제자리 유지 (나중에 결정)]      │  ← v6: 맥락 유지
└──────────────────────────────┘
```

v6 변경: "둘 다 취소하고 목록 이동" → **"제자리 유지 (나중에 결정)"**. 현재 화면 유지, 해당 하트만 pending 상태로 표시해 사용자가 A-9에서 계속 검토 가능.

**v7 변경: ESC 허용**. `role="alertdialog"`이지만 ESC 키는 "제자리 유지"와 동일하게 처리하여 접근성 탈출 경로 보장. `aria-describedby`로 ESC 동작 명시.

스크린리더: `role="alertdialog"` + 전체 diff를 구조적으로 낭독 + "ESC 키를 누르면 제자리 유지로 처리됩니다" 안내

### 충돌 + 마감 동시 발생 우선순위 (v6 신규)

충돌 모달이 열린 상태에서 라운드 마감이 도래하는 경우:

```
T-5초: 충돌 모달 열림
T-2초: 2차 투표 마감 임박
T=0: 마감 시각
```

규칙:
1. 마감 2초 전: 모달에 **경고 배너 삽입** — "⏰ 2초 후 마감, 지금 선택하지 않으면 '제자리 유지'로 처리"
2. 마감 시각 도래: **자동으로 "제자리 유지" 선택** (서버 측 마지막 성공 상태 유지)
3. 마감 후: 모달 내용을 결과 알림으로 변경 — "마감됐어요. {실제 저장된 상태}가 최종입니다"
4. 사용자가 아무 선택 안 한 경우에도 사용자 변경은 **버리고** 서버 상태를 최종으로 인정 (충돌 없음 보장)

이유: 마감 시각 이후 서버 상태 변경 금지가 최우선. 사용자 결정은 2차적.

### Unsaved Items List (v5 신규 — Codex 지적 #6)

하트 저장 실패가 여러 건일 때 `/my-hearts` 상단에 집계 표시:

```
┌─────────────────────────────────┐
│ ⚠ 저장되지 않은 변경 3건          │
│ ──────────────────────────────  │
│ • 02 라이트 (선택 시도 · 실패)     │
│   마지막 시도 22:05:12            │
│   [다시 시도]                     │
│ • 08 오렌지빛 (취소 시도 · 실패)   │
│   [다시 시도]                     │
│ • 12 달빛 (충돌)                  │
│   [내용 확인]                     │
│                                  │
│ [모두 재시도] [모두 폐기]          │
└─────────────────────────────────┘
```

우선순위: 충돌 > 실패 > 저장 중

### Focus Management (v4 patch → base 통합, 충돌 해소)

**v4에서 발견된 Patch 5 vs 6 충돌 해결** (Codex 지적 #4):

차단 후 결과 화면 포커스 규칙 **최종 확정**:
- 진입 시 autofocus: **첫 번째 "다음으로" CTA** (`[참여자 목록으로]`)
- `[차단 해제하기]`는 화면 하단의 **secondary 액션**으로만 존재 (autofocus 아님)
- 명시 이유: 차단 직후 사용자의 주 목적은 "다른 곳으로 이동"이지 "방금 내린 결정 뒤집기"가 아님

통합 포커스 규칙:

| 상황 | 포커스 대상 | 규칙 |
|------|-----------|------|
| 바텀시트 열림 | 첫 버튼 또는 첫 필드 | focus trap + ESC 복귀 |
| 바텀시트 닫힘 | **원래 트리거 버튼** | 복귀 필수 |
| 모달 열림 | 제목 또는 첫 버튼 | focus trap |
| 탭 전환 | 결과 리스트 첫 아이템 | aria-live 알림 |
| 차단 결과 화면 | `[참여자 목록으로]` | 해제 버튼 자동 포커스 X |
| 신고 제출 성공 | 바텀시트 닫기 버튼 | - |
| 하트 토글 | **버튼 유지** (이동 X) | aria-pressed 변경 |
| 투표 단계 전환 | **현재 포커스 유지** (이동 금지) | aria-live 배너 알림만 |

### Welcome Tutorial (v5 신규 — Codex 지적 #7)

처음 입장한 참여자에게 `유지/신규/해제 예정` 개념 1회 설명:

```
┌───────────────────────┐  375×812 (A-5 온보딩 강화)
│  1/4  파티 흐름을 알려드려요 │
│                            │
│   ┌──────────────────┐   │
│   │  🌸             💜   │   │
│   │  1차          2차   │   │
│   │  첫인상      대화 후 │   │
│   └──────────────────┘   │
│                            │
│   [다음] [건너뛰기]         │
└───────────────────────┘

┌───────────────────────┐  2/4 하트 규칙
│ 마음에 드는 사람에게    │
│ ❤ 하트 3개까지 보낼 수  │
│ 있어요                  │
│ (1차·2차 각각)           │
└───────────────────────┘

┌───────────────────────┐  3/4 유지/신규/해제
│ 2차에서 1차 선택을      │
│ 바꿀 수 있어요            │
│                          │
│ ✓ 유지 · ✨ 신규          │
│ 🗑 해제 예정             │
│                          │
│ [예시 카드 3개 이미지]    │
└───────────────────────┘

┌───────────────────────┐  4/4 매칭
│ 서로 하트를 보내면       │
│ 🎉 매칭!                  │
│ 2차 마감 후 공개돼요       │
│                          │
│ [시작하기]                │
└───────────────────────┘
```

로컬 스토리지: `tutorial_seen=true` 저장, 2회부터 생략 (설정에서 재보기 가능)

### Report Follow-up Policy (v6 — UI 약속 최소화)

신고 제출 후 사용자 피드백 (UI가 절대 약속하지 않는 것 주의):

```
┌──────────────────────────────┐
│ ✓ 신고가 접수되었어요           │
│                                │
│ 주최자가 확인 후 판단해요.       │
│                                │
│ ℹ 처리 결과는 개별 안내하지     │
│   않아요                        │
│                                │
│ 이 사람을 즉시 차단하려면:       │
│ [🚫 라이트 #02 차단하기]        │
│                                │
│ [닫기]                         │
└──────────────────────────────┘
```

**v6 원칙: UI는 정책을 약속하지 않는다.**
- UI 문구: "주최자가 판단한다"까지만 — 구체 처리 옵션(숨김/강퇴) 나열 X
- UI 문구: "처리 결과는 개별 안내하지 않는다"까지만 — "3회 누적 자동 검토" 같은 운영 프로세스 약속 X
- 운영 정책(신고 누적 처리, 재발 기준, 피드백 여부)은 **주최자 전용 문서**에 별도 관리하고 참여자 UI에 노출하지 않음
- 이유: 운영 정책이 바뀌어도 UI가 거짓말이 되지 않게

---

## 접근성 인터랙션 규격 (v3와 동일, 포커스 규칙만 위 표로 통합)

### ARIA Live Region 문구
(v3와 동일)

### 카운트다운 낭독 규칙
> 10분: 1분마다 / 5~10분: 30초마다 / 1~5분: 30초마다 / 1분 미만: 10/5/3/2/1초

### Reduced Motion
모달/시트 애니메이션 50ms fade, countdown pulse 제거, skeleton 정적, toast 즉시

### 아이콘 스크린리더 대체 문구 (v10 신규)

시각 아이콘에 의존하는 모든 상태는 다음 `aria-label` 사용:

| 아이콘 | aria-label (한국어) | 맥락 |
|--------|-------------------|------|
| ❤ | "하트 보냄" | 하트 버튼 selected |
| ♡ | "하트 없음" | 하트 버튼 unselected |
| 🆕 | "최근 5분 내 입장" | 새로 들어옴 배지 |
| ✨ | "신규 선택" | A-9 신규 배지 |
| ✓ | "유지 중" | A-9 유지 배지 (A-9 전용) |
| 🗑 | "해제 예정" | A-9 해제 예정 배지 |
| ⏳ | "저장 중 또는 대기 중" | pending/closing-saving |
| 🔄 | "충돌 미해결 · 내용 확인 필요" | conflict-pending |
| ⚠ | "주의 필요" | 에러/경고 |
| 🔒 | "익명" | 받은 관심 카드 |
| 💝 | "매칭 결과" | 매칭 카드 |
| 🌸 | "1차 투표" | 1차 단계 배지 |
| 💜 | "2차 투표" | 2차 단계 배지 |
| 🎉 | "축하 · 매칭 성공" | 매칭 모달 |
| 🚫 | "차단됨" | 차단 화면 |
| 🚩 | "신고" | 신고 버튼 |
| 📋 | "목록 검토" | 내 선택 검토 CTA |

### Destructive Action Guard (v10 신규)

`[모두 폐기]` / `[파티 강제 종료]` 같은 파괴적 액션은 **2단계 확인** 필수:

**1단계 — 영향 범위 안내 바텀시트**:
```
┌──────────────────────────────┐
│  ⚠ 저장 미완료 3건 모두 폐기?  │
│                                │
│  영향:                         │
│  • 실패 1건: 저장 시도 취소    │
│  • 충돌 1건: 내 선택 포기      │
│  • 저장 중 1건: 현 상태 유지   │
│                                │
│  ⚠ 되돌릴 수 없어요            │
│                                │
│  [취소]  [폐기하기 (다음)]     │
└──────────────────────────────┘
```

**2단계 — 확인 문구 입력**:
```
┌──────────────────────────────┐
│  정말 폐기할까요?               │
│                                │
│  확인 문구 입력:                │
│  ⬚ 폐기 _______                │
│  (정확히 "폐기" 입력 필요)      │
│                                │
│  [취소]  [폐기] (danger)       │
└──────────────────────────────┘
```

**완료 후 되돌리기**: 5초 Undo 토스트 제공 (취소 요청 가능):
```
┌─────────────────────────────┐
│ ✓ 3건 폐기됨  [되돌리기]     │
│ 5초 내에 되돌릴 수 있어요    │
└─────────────────────────────┘
```

---

## 🔴 v11 핵심 신규 섹션 (근본 원인 해결)

### 2차원 탭 모델 (v11 — 근본 원인 #1 해결)

**문제**: v3~v10에서 A-9 탭이 "결과 분류(유지/신규/해제)"와 "처리 상태(확정/미완료)"를 1차원에 섞었음. Codex가 "정보 모델 축 혼재" 지적.

**해결**: **두 축을 분리하고 1축 선택 후 2축 제공**:

```
┌── 상태 축 (라디오, 상호 배타) ────────┐
│  (◉ 확정 3) ( 미완료 2)                │
└────────────────────────────────────────┘
            ↓ 확정 선택 시
┌── 분류 축 (탭, 다중 선택 X) ─────────┐
│  [모두 3] [유지 2] [신규 1] [해제 0]  │
└────────────────────────────────────────┘

            ↓ 미완료 선택 시
┌── 미완료 하위 분류 ───────────────────┐
│  [모두 2] [저장 실패 1] [충돌 1]      │
│  [저장 중 0]                           │
└────────────────────────────────────────┘
```

**규격**:
- 상태축: `role="radiogroup"`, aria-label="상태 필터"
- 분류축: `role="tablist"`, 상태축 선택 따라 항목 동적 변경
- 키보드: 상태축 ←→ / 분류축 ←→ (독립)
- 선택 즉시 리스트 리렌더 + aria-live 안내 ("확정 유지 2명 표시")

### 렌더링 규칙 테이블 (v12 — 구체 명세)

1축 상태 선택 시 **2축 및 카드 섹션**에 **정확히 어떤 것이 표시/숨김** 되는지 고정:

| 1축 (상태) | 2축 노출 항목 | 노출 카드 섹션 | 숨기는 섹션 |
|-----------|-------------|-------------|------------|
| **확정** | `[모두][유지][신규][해제 예정]` | 해당 분류 카드 (서버 확정된 것만) | ⏳ 저장 중, 🔄 pending 섹션 **완전 숨김** |
| **미완료** | `[모두][저장 실패][충돌][저장 중]` | 해당 분류 카드 (서버 미확정) | ✓ 유지, ✨ 신규, 🗑 해제 예정 섹션 **완전 숨김** |

**동시 표시 금지 원칙**: 한 화면에 **1축 선택된 하나의 축에 속한 카드만** 보인다. 두 축의 카드 섹션이 동시에 보이지 않는다.

**2축 기본 선택**:
- 상태=확정 최초 진입 시 → 2축 [모두] 자동 선택
- 상태=미완료 전환 시 → 2축 [모두] 자동 선택 (이전 선택 보존 안 함)

**Empty 상태**:
- 확정+해제 예정 0명: "아직 해제한 사람이 없어요"
- 미완료+저장 실패 0건: "저장 실패 없음 ✨"
- 상태=미완료 + 전체 0건: "미완료 항목 없음 · 모든 변경이 저장됐어요 ✓" (축하 톤)

**aria-live 안내**:
- 1축 변경 시: "상태 미완료 선택됨, 미완료 항목 2건 표시"
- 2축 변경 시: "저장 실패 1건 표시"

**렌더링 플로우**:
```
사용자 A-9 진입
  → 상태=확정 (default)
  → 분류=모두 (default)
  → 서버 확정 3명 카드 모두 표시
  → ⏳/🔄 섹션 숨김
  
사용자 상태=미완료 탭
  → 분류=모두로 자동 전환
  → 미완료 카드만 표시 (2건)
  → 확정 카드 섹션 숨김
  → aria-live: "미완료 2건 표시"
```

### 실패 우선순위 트리 (v12 — 단일 진실 원천)

**최종 우선순위** (wireframes와 동일):

```
1. ⏰ 마감 도래 (최우선, 되돌릴 수 없음)
   └ 모든 pending → 서버 마지막 성공 상태로 확정
   └ 열린 모달/시트 → 자동 "제자리 유지" 처리
   
2. 🔄 충돌 (동시성, 사용자 선택 필요)
   └ diff 모달 표시, 사용자 결정 대기
   └ 그동안 다른 저장 시도는 큐 대기
   
3. 🔴 저장 실패 (서버 오류)
   └ 자동 재시도 3회 (2s/4s/8s)
   └ 실패 지속 시 수동 재시도
   
4. 📡 네트워크 끊김 (최후)
   └ 저장 시도 offline 큐로
   └ 재연결 시 순차 재시도
```

**단일 진실 원천**: 이 트리가 프로젝트 전체의 **유일한 실패 우선순위 규칙**. wireframes.md v11 서두의 "충돌 > 마감" 표기는 오류였으며 v12에서 "마감 > 충돌"로 통일.

### 카드 ARIA 낭독 패턴 (v11 — 근본 원인 #2 해결)

**문제**: 개별 아이콘 `aria-label`만 있어서 카드 = 여러 상태 조합일 때 사용자가 파편적으로 듣게 됨.

**해결 (v12 교정)**: 카드는 `role` 없는 `aria-label` 컨테이너 + 내부 버튼은 독립 role. 중첩 충돌 제거:

```html
<!-- 카드: 컨테이너, 자체는 버튼이 아님 -->
<article
  aria-label="라이트 02번, 2차 투표에서 유지, 서버 확정 상태, 5분 전 입장"
>
  <!-- 카드 본문 탭 = 상세 이동 링크 (독립) -->
  <a href="/r/:code/people/02" class="card-body">
    <!-- 시각 요소: 모두 aria-hidden="true" (카드 aria-label에 이미 포함) -->
    <img aria-hidden="true" ... />
    <span aria-hidden="true">라이트 #02</span>
    <span aria-hidden="true">✓ 유지</span>
  </a>
  <!-- 하트 버튼: 독립 role=button, 별도 label -->
  <button
    role="button"
    aria-label="라이트 02번에게 보낸 하트 취소"
    aria-pressed="true"
  >
    ❤
  </button>
</article>
```

**접근성 구조 원칙 (v12 정식)**:
- **카드 자체**: `<article>` + `aria-label` (전체 상태 낭독용 단일 문자열)
- **카드 본문 링크**: `<a>` 또는 `role="link"`, `aria-label`로 "라이트 상세 보기"
- **하트 버튼**: `<button>` + 별도 `aria-label` + `aria-pressed`
- **금지**: 카드 전체에 `role="button"` — 내부 버튼과 중첩, 스크린리더 혼란
- **금지**: 내부 요소에 별도 포커스 — 내부는 `aria-hidden="true"` 또는 본문 링크 1개만

**키보드 경로**: Tab으로 카드 본문(링크) → 하트 버튼 순서. 카드 내 2개의 명확한 stop point.

**낭독 패턴 규칙**:
```
[닉네임] [번호], [투표 라운드 상태], [저장 상태], [입장 시점], [액션 상태]
```

예시별:
| 상황 | 낭독 |
|------|------|
| 기본 선택 | "라이트 02번, 2차 투표 유지, 서버 확정, 5분 전 입장, 하트 보냄" |
| 신규 선택 | "오렌지빛 08번, 2차 투표 신규 선택, 서버 확정, 새로 들어옴 3분 전, 하트 보냄" |
| 저장 실패 | "달빛 12번, 저장 실패, 재시도 필요, 10분 전 입장" |
| 충돌 | "오로라 15번, 동시성 충돌 미해결, 내용 확인 필요, 8분 전 입장" |
| 해제 예정 | "바람 18번, 해제 예정, 마감 시 취소됨, 15분 전 입장" |

**복합 탭 낭독**:
```
탭 활성 시: "상태 필터 확정 선택됨, 분류 필터 유지 2명 표시"
```

**모달 낭독**:
```
열림 시: "충돌 해결 모달, 라이트 02번, 3가지 선택지"
각 버튼: "내 변경 사용 버튼, 선택 상태로 저장"
```

### 실패 우선순위 트리 (v11 — 근본 원인 #3 해결)

**문제**: 충돌+마감, 저장 실패+네트워크 끊김 같은 교차 시나리오 규칙 없음.

**해결**: 우선순위 트리 + 의사결정 플로우:

**우선순위 (위→아래)**:
```
1. ⏰ 마감 도래 (되돌릴 수 없음)
   → 모든 pending은 서버 마지막 성공 상태로 확정
   → 충돌 모달 열려 있어도 자동 "제자리 유지" 처리

2. 🔄 충돌 (동시성)
   → diff 모달 표시, 사용자 선택 대기
   → 그동안 다른 모든 저장 시도는 큐에 대기

3. 🔴 저장 실패 (서버 5xx / 네트워크)
   → 자동 재시도 3회 (2s/4s/8s)
   → 모두 실패 시 사용자 수동 재시도

4. 📡 네트워크 끊김
   → 전체 화면 배너 "연결 끊김 · 재연결 중"
   → 저장 시도 모두 offline 큐로 이동
   → 재연결 성공 시 큐 순차 재시도
```

**복합 시나리오 해결 예시**:

| 동시 발생 | 처리 |
|----------|------|
| 마감 2초 전 + 충돌 모달 열림 | 모달 내부에 "⏰ 2초 후 마감, 선택 안 하면 제자리 유지" 배너 삽입 |
| 저장 실패 + 네트워크 끊김 | 네트워크 우선 → 재연결 후 실패건 재시도 |
| 마감 + 네트워크 끊김 | 마감 우선 → 서버 상태 최종 → 재연결 후 결과만 표시 |
| 저장 실패 + 다른 곳 충돌 | 각각 독립 처리 (UI 분리 표시) |

### UI 약속 한계 원칙 (v11 — 근본 원인 #4 해결)

**문제**: UI 문서가 "3회 누적 자동 검토", "처리 옵션 나열" 같이 운영 프로세스를 약속하면 정책 변경 시 UI가 거짓말 됨.

**해결 원칙**:

**UI가 약속할 수 있는 것**:
- 수신 사실 ("신고가 접수되었어요")
- 비공개 정책 ("결과 개별 안내 안 함")
- 사용자 직접 조치 경로 ("지금 차단하기")

**UI가 약속하지 말아야 할 것**:
- 구체적 처리 옵션 (숨김/강퇴)
- 자동화 정책 (누적 기준, 자동 검토)
- 시간 보장 (몇 분 내 처리)
- 주최자 행동 예측

**근거**: 운영 정책은 주최자가 변경 가능. UI 문구는 코드 배포로만 변경 → 미스매치 위험.

**모든 UI 복사 체크리스트** (구현자용):
- [ ] 구체적 처리 옵션을 나열하지 않았는가?
- [ ] 시간/횟수 기준을 약속하지 않았는가?
- [ ] "주최자가 판단/확인" 수준을 넘지 않았는가?
- [ ] 사용자 직접 조치 경로는 제공하는가?

